slides ISSAC and MEGA

--- a/cv.html
+++ b/cv.html
@@ -651,12 +651,12 @@
 
           <br/><div class="cv">
           <div class="year"><h4>2024</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2024">MEGA 2024: Effective Methods in Algebraic Geometry</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">On the Number of Real Zeros of Random Sparse Polynomial Systems<!--<span style="float:right;"><a href="pdf/MEGA2024_slides.pdf">Slides</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">On the Number of Real Zeros of Random Sparse Polynomial Systems<span style="float:right;"><a href="pdf/MEGA2024_slides.pdf">Slides</a></span><!-- / <a href="">Video</a></span>--></div>
           </div>
 
           <br/><div class="cv">
           <div class="year"></div><div class="title"><h4>&emsp;<a href="#ISSAC2024">49th International Symposium on Symbolic and Algebraic Computations (ISSAC'24)</a></h4></div>
-            <div class="pretalktitle"></div><div class="talktitle">Some Lower Bounds on the Reach of an Algebraic Variety<!--<span style="float:right;"><a href="pdf/ISSAC22_slides.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=kv_H87tGEEo">Video</a></span>--></div>
+            <div class="pretalktitle"></div><div class="talktitle">Some Lower Bounds on the Reach of an Algebraic Variety<span style="float:right;"><a href="pdf/ISSAC24_slides.pdf">Slides</a></div>
             <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Presentation supported by the <a href="https://engineering.jhu.edu/ams/research/probability-and-stochastic-processes/duncan-research-fund/">Acheson J. Duncan Fund for the Advancement of Research in Statistics</a></div>
           </div>
 
