--- a/aboutme.html
+++ b/aboutme.html
@@ -103,7 +103,7 @@
   I am originally from Bilbao, a city of the Basque Country in the north of Spain, although I was born in Santander, another city in the north of Spain. I consider myself from Bilbao because that's the city I grew up in and I was brought up in. Also, as they say in Spanish, &ldquo;the cow is from where it grazes&rdquo; and &ldquo;people from Bilbao are born wherever they want.&rdquo;
   </p>
   <p>
-  Currently, I am a postdoctoral researcher at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas. My interests are numerical algorithms and condition-based complexity, computational algebraic geometry, and random geometry.
+  Currently, I am a Rufus Isaacs Postdoctoral Fellow at the Department of Applied Mathematics and Statistics of Johns Hopkins University, under the supervision of Soledad Villar. My interests are numerical algorithms and condition-based complexity, computational algebraic geometry, and random geometry.
   </p>
   <p>
   Apart from discussing, thinking and writing about mathematics, I also enjoy other aspects of life. Here is a quasi-random alphabetical list of another ten things I enjoy: 1st, chatting and discussing random topics with friends (and sometimes other people) over a beer (or other equivalent drink); 2nd, drinking coffee; 3rd, folding origami figures; 4th, Iberian ham; 5th, reading non-mathematical books; 6th, riding a bike; 7th, sending postcards; 8th, swimming in the sea (when possible); 9th, walking while lost in my thoughts; and 10th, writing short stories, poems and calligrams. Of course, there are more things I enjoy, like cats, but listing things I enjoy is not something I enjoy.
@@ -124,7 +124,10 @@
   During my stay at BMS, I have participated actively in the life of the school. During 2017, I was a BMS Student Representative; in 2018, I organized the BMS Student Conference, together with my fellow student representatives; and, since 2016 until the end of my studies, I was participating in the organization of the &ldquo;What is...?&rdquo; Seminar.
   </p>
   <p>
-  In 2020, I started a postdoc at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas.
+  In Februry of 2020, I joined as a postdoc the OURAGAN team at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas, being under a postdotoral fellowship ("Interaction" program of 2020) of the Fondation Sciences Mathématiques de Paris from October of 2020.
+  </p>
+  <p>
+  In October of 2022, I moved to the USA. There, I was as a Lecturer/Postdoc the Department of Mathematics of University of Texas at San Antonio under the mentorship of Alperen A. Ergür during the academic year 2022/23. In 2023, I became a Rufus Isaacs Postdoctoral Fellow at the Department of Applied Mathematics and Statistics of Johns Hopkins University, under the supervision of Soledad Villar, where I am currently at.
   </p>
   <h3>Math Genealogy</h3>
   <p>You can research my mathematical academic ancestors and relatives through the Math Genealogy Project.</p>
