--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -104,7 +104,7 @@
     Soy originario de Bilbao, una ciudad del Pa&iacute;s Vasco (o Euskadi) en el norte de Espa&ntilde;a, aunque nac&iacute; en Santander, otra ciudad en el norte de Espa&ntilde;a. Me considero de Bilbao, porque esta es la ciudad donde crec&iacute; y me cri&eacute;. Tambi&eacute;n, como dicen los dichos, &ldquo;la vaca es de donde pace&rdquo; y &ldquo;los de Bilbao nacemos donde nos da la gana.&rdquo;
   </p>
   <p>
-    Actualmente, soy un investigador postdoctoral en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas Mis intereses est&aacute;n formados por los algoritmos num&eacute;ricos y la complejidad basada en condici&oacute;n, la geometr&iacute;a algebraica computacional y la geometr&iacute;a aleatoria.
+    Actualmente, soy un Rufus Isaacs Postdoctoral Fellow en el Department of Applied Mathematics and Statistics de la Johns Hopkins University, siendo mi mentora Soledad Villar. Mis intereses est&aacute;n formados por los algoritmos num&eacute;ricos y la complejidad basada en condici&oacute;n, la geometr&iacute;a algebraica computacional y la geometr&iacute;a aleatoria.
   </p>
   <p>
     Adem&aacute;s de discutir, pensar y escribir acerca de las matem&aacute;ticas, hay otros aspectos de la vida que disfruto. A continuaci&oacute;n, una lista alfab&eacute;tica cuasi-aleatoria de otras diez cosas que me gustan y disfruto: 1&ordf;, andar mientras ando perdido en mis pensamientos; 2&ordf;, ba&ntilde;arme en el mar (cuando es posible); 3&ordf;, beber caf&eacute;; 4&ordf;, conversar y debatir sobre temas varios con mis amigues (y a veces otras personas) mientras tomo una cerveza (u otra bebida equivalente); 5&ordf;, enviar postales; 6&ordf;, escribir historias cortas, poemas y caligramas; 7&ordf;, hacer figuras de origami; 8&ordf;, el jam&oacute;n ib&eacute;rico; 9&ordf;, leer libros no matem&aacute;ticos; y 10&ordf;, montar en bici. Por supuesto, hay m&aacute;s cosas que me gustan, como los gatos, pero listar cosas que me gustan no es una cosa que me guste.
@@ -125,7 +125,10 @@
     Durante mi paso por la BMS, he participado activamente en la vida de la escuela. Durante el 2017, fui BMS Student Representative; en 2018, organiz&eacute;, junto a mis compa&ntilde;eres de les BMS Student Representatives, la BMS Student Conference; y, desde 2016 hasta el fin de mis estudios all&iacute;, estuve participando en la organizaci&oacute;n del &ldquo;What is...?&rdquo; Seminar.
   </p>
   <p>
-    En 2020, empec&eacute; un postdoc en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas.
+  En febrero del 2020, me incorporé como postdoc al equipo OURAGAN de INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas y estando bajo una beca postdoctoral ("Interaction" program of 2020) de la Fondation Sciences Mathématiques de Paris desde octubre del 2020.
+  </p>
+  <p>
+  En octubre del 2022, me mudé a los EEUU. Ahí, fui un Lecturer/Postdoc en el Department of Mathematics de la University of Texas at San Antonio, siendo mi mentor Alperen A. Ergür, durante el año académico 2022/23. En 2023, empezé como Rufus Isaacs Postdoctoral Fellow en el Department of Applied Mathematics and Statistics de la Johns Hopkins University, siendo mi mentora Soledad Villar, donde me encuentro ahora mismo.
   </p>
   <h3>Genealog&iacute;a matem&aacute;tica</h3>
   <p>Puedes investigar mes ancestres y familiares matem&aacute;tiques acad&eacute;miques en el Math Genealogy Project.</p>
